--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "knex": "^0.16.5",
     "knex-cleaner": "^1.1.4",
     "morgan": "^1.9.1",
-    "pg": "^7.10.0",
-    "sqlite3": "^4.0.6"
+    "pg": "^7.10.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
+    "sqlite3": "^4.0.6",
     "supertest": "^4.0.2"
   }
 }
