--- a/.prettierrc
+++ b/.prettierrc
@@ -4,11 +4,13 @@
   "endOfLine": "auto",
   "htmlWhitespaceSensitivity": "css",
   "jsxBracketSameLine": false,
+  "jsxSingleQuote": false,
   "printWidth": 80,
   "proseWrap": "preserve",
+  "quoteProps": "as-needed",
   "requirePragma": false,
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
   "useTabs": false,
