--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "faker": "^4.1.0",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.4.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
     "pg": "^7.10.0"
