--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwks-rsa": "^1.4.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "pg": "^7.10.0"
   },
   "devDependencies": {
