--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.4.0",
     "knex": "^0.16.5",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
     "pg": "^7.10.0"
