--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -21,8 +22,8 @@
     "knex": "^0.16.5",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "node-cron": "^2.0.3",
     "multer": "^1.4.1",
+    "node-cron": "^2.0.3",
     "pg": "^7.10.0"
   },
   "devDependencies": {
