--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ env:
   variables:
     # enables continuous integration settings where applicable
     CI: true
+    PORT: 5000
 
 phases:
   install:
@@ -17,11 +18,10 @@ phases:
   build:
     commands:
       - sleep 10
-      - npx pm2 status
   post_build:
     commands:
       # handles a conflict between npm and yarn, must find more elegant solution
-      - npx pm2 status
+      - curl localhost:5000
       - rm -rf ./node_modules
 artifacts:
   files:
