--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
       - npx pm2 start index.js
   build:
     commands:
-      - sleep 10
+      - #sleep 10
   post_build:
     commands:
       # handles a conflict between npm and yarn, must find more elegant solution
