Adds automated ESlint

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,8 +13,8 @@ phases:
       - npx yarn install
   pre_build:
     commands:
-      #- npm run test
-      - npx pm2 start index.js
+      - npm run test
+      #- npx pm2 start index.js
   build:
     commands:
       - #sleep 10
