--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer": "^1.4.1",
     "node-cron": "^2.0.3",
     "pg": "^7.10.0",
-    "pm2": "^3.5.0"
+    "pm2": "^3.5.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
